# microsoft-rewards-bot

./: .gitignore  LICENSE  README.md  exceptions.py  get_sms_man_country_code.py  ms_rewards_farmer.py  pyproject.toml  setup.md  sms_man.py
